# RWA1

./: README.md
group2_rwa1/: .project  CMakeLists.txt  README.md  package.xml
group2_rwa1/config/: sample_user_conf.yaml
group2_rwa1/launch/: group2_rwa1.launch
group2_rwa1/src/: ariac_example_node.cpp
group2_rwa2/: CMakeLists.txt  README.md  package.xml
group2_rwa2/config/: sample_user_config.yaml
group2_rwa2/launch/: group2_rwa1.launch  group2_rwa2.launch
group2_rwa2/src/: ariac_example_node.cpp
