<?xml version="1.0"?>
<package format="2">
  <name>group2_rwa2</name>
  <version>0.1.0</version>
  <description>Homework 2 submission for group 2</description>
  <maintainer email="cjoshi17@umd.edu">Chinmay Joshi</maintainer>
  <maintainer email="abcd@umd.edu">Rachith Prakash</maintainer>
  <maintainer email="abcd@umd.edu">Raj Shinde</maintainer>
  <maintainer email="abcd@umd.edu">Shesh Mali</maintainer>
  <maintainer email="abcd@umd.edu">Shubham Sonawane</maintainer>

  <license> BSD </license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
